--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,193 @@
 html, body {
-  width: 100%;
-  heigth: 100%;
-  margin: 0;
-  padding: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    color: white;
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: normal;
+    font-style: normal;
+    overflow: hidden;
+}
+
+body {
+    background-image: url("images/backgroundimage2.png");
+}
+
+header {
+    background-image: url("images/backgroundimage.jpg");
+    width: 90%;
+    height: 14%;
+    border-radius: 2rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    font-size: 1.5rem;
+    margin: auto;
+    margin-top: 1.5rem;
+}
+
+@property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
+
+header::after, header::before {
+    --angle: 0deg;
+    content: '';
+    position: absolute;
+    height: 14.3%;
+    width: 90.2%;
+    background-image: conic-gradient(
+        from var(--angle),
+        #ff4554,
+        #00ff99,
+        #006aff,
+        #ff0095,
+        #ff4554
+    );
+    left: 50%;
+    top: 9.5%;
+    translate: -50% -50%;
+    z-index: -1;
+    padding: 3px;
+    border-radius: 2.2rem;
+    animation: spin 3s linear infinite;
+}
+
+header::before {
+    filter: blur(1.5rem);
+    opacity: .5;
+}
+
+@keyframes spin {
+    from{
+        --angle: 0deg;
+    } to {
+        --angle: 360deg;
+    }
+}
+
+header h2 {
+    margin-left: .5rem;
+    font-size: 1.5rem;
+}
+
+section {
+    width: 90%;
+    height: 64%;
+    background-image: url("images/backgroundimage2.png");
+    background-attachment: fixed;
+    margin: auto;
+    margin-top: 1rem;
+    border-radius: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+section::after, section::before {
+    --angle: 0deg;
+    content: '';
+    position: absolute;
+    height: 64.3%;
+    width: 90.2%;
+    background-image: conic-gradient(
+        from var(--angle),
+        #ff4554,
+        #00ff99,
+        #006aff,
+        #ff0095,
+        #ff4554
+    );
+    left: 50%;
+    top: 50.2%;
+    translate: -50% -50%;
+    z-index: -1;
+    padding: 3px;
+    border-radius: 2.2rem;
+    animation: spin 3s linear infinite;
+}
+
+section::before {
+    filter: blur(1.5rem);
+    opacity: .5;
+}
+
+div {
+    width: 30%;
+    height: 90%;
+    backdrop-filter: blur(1.5rem);
+    margin: auto;
+    border-radius: 2rem;
+    border: dashed 1px white;
+}
+
+div label {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+#pingu {
+    background-image: url("images/Pingu3D.PNG");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 0 50%;
+}
+
+#xori {
+    background-image: url("images/xoriimage.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 0 50%;
+}
+
+footer {
+    background-image: url("images/backgroundimage.jpg");
+    width: 90%;
+    height: 14%;
+    border-radius: 2rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    font-size: 1.5rem;
+    margin: auto;
+    margin-top: 1.5rem; 
+}
+
+footer::after, footer::before {
+    --angle: 0deg;
+    content: '';
+    position: absolute;
+    height: 14.3%;
+    width: 90.2%;
+    background-image: conic-gradient(
+        from var(--angle),
+        #ff4554,
+        #00ff99,
+        #006aff,
+        #ff0095,
+        #ff4554
+    );
+    left: 50%;
+    top: 91.7%;
+    translate: -50% -50%;
+    z-index: -1;
+    padding: 3px;
+    border-radius: 2.2rem;
+    animation: spin 3s linear infinite;
+}
+
+footer::before {
+    filter: blur(1.5rem);
+    opacity: .5;
 }
