--- a/styles/style.css
+++ b/styles/style.css
@@ -12,11 +12,11 @@ html, body {
 }
 
 body {
-    background-image: url("./images/backgroundimage2.png");
+    background-image: url("../images/backgroundimage2.png");
 }
 
 header {
-    background-image: url("./images/backgroundimage.jpg");
+    background-image: url("../images/backgroundimage.jpg");
     width: 90%;
     height: 14%;
     border-radius: 2rem;
