--- a/styles/style.css
+++ b/styles/style.css
@@ -1,209 +1,270 @@
-html, body {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    color: white;
-    font-family: "Nunito", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: normal;
-    font-style: normal;
-    overflow: hidden;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  color: white;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+  overflow: hidden;
+  cursor: default;
 }
 
 body {
-    background-image: url("../images/backgroundimage2.png");
+  background-image: url("../images/backgroundimage2.png");
 }
 
 header {
-    background-image: url("../images/backgroundimage.jpg");
-    width: 90%;
-    height: 14%;
-    border-radius: 2rem;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    display: flex;
-    font-size: 1.5rem;
-    margin: auto;
-    margin-top: 1.5rem;
+  background-image: url("../images/backgroundimage.jpg");
+  width: 90%;
+  height: 14%;
+  border-radius: 2rem;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  font-size: 1.5rem;
+  margin: auto;
+  margin-top: 1.5rem;
 }
 
 @property --angle {
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
 }
 
-
-header::after, header::before {
-    --angle: 0deg;
-    content: '';
-    position: absolute;
-    height: 14.3%;
-    width: 90.2%;
-    background-image: conic-gradient(
-        from var(--angle),
-        #ff4554,
-        #00ff99,
-        #006aff,
-        #ff0095,
-        #ff4554
-    );
-    left: 50%;
-    top: 9.5%;
-    translate: -50% -50%;
-    z-index: -1;
-    padding: 3px;
-    border-radius: 2.2rem;
-    animation: spin 3s linear infinite;
+header::after,
+header::before {
+  --angle: 0deg;
+  content: "";
+  position: absolute;
+  height: 14.3%;
+  width: 90.2%;
+  background-image: conic-gradient(
+    from var(--angle),
+    #ff4554,
+    #00ff99,
+    #006aff,
+    #ff0095,
+    #ff4554
+  );
+  left: 50%;
+  top: 9.5%;
+  translate: -50% -50%;
+  z-index: -1;
+  padding: 3px;
+  border-radius: 2.2rem;
+  animation: spin 3s linear infinite;
 }
 
 header::before {
-    filter: blur(1.5rem);
-    opacity: .5;
+  filter: blur(1.5rem);
+  opacity: 0.5;
+}
+
+.timer {
+  position: absolute;
+  width: 8%;
+  height: 5%;
+  left: 52.5rem;
+  top: 14rem;
+  font-size: 2rem;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+}
+
+.timer:hover {
+  font-size: 2.3rem;
 }
 
 @keyframes spin {
-    from{
-        --angle: 0deg;
-    } to {
-        --angle: 360deg;
-    }
+  from {
+    --angle: 0deg;
+  }
+  to {
+    --angle: 360deg;
+  }
 }
 
 header h2 {
-    margin-left: .5rem;
-    font-size: 1.5rem;
-    transition: 1s;
+  margin-left: 0.5rem;
+  font-size: 1.5rem;
+  transition: 1s;
 }
 
 header:hover h2 {
-    transform: scale(110%);
+  font-size: 2rem;
 }
 
 section {
-    width: 90%;
-    height: 64%;
-    background-image: url("../images/backgroundimage2.png");
-    background-attachment: fixed;
-    margin: auto;
-    margin-top: 1rem;
-    border-radius: 2rem;
-    display: flex;
-    flex-wrap: wrap;
+  width: 90%;
+  height: 64%;
+  background-image: url("../images/backgroundimage2.png");
+  background-attachment: fixed;
+  margin: auto;
+  margin-top: 1rem;
+  border-radius: 2rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-section::after, section::before {
-    --angle: 0deg;
-    content: '';
-    position: absolute;
-    height: 64.3%;
-    width: 90.2%;
-    background-image: conic-gradient(
-        from var(--angle),
-        #ff4554,
-        #00ff99,
-        #006aff,
-        #ff0095,
-        #ff4554
-    );
-    left: 50%;
-    top: 50.2%;
-    translate: -50% -50%;
-    z-index: -1;
-    padding: 3px;
-    border-radius: 2.2rem;
-    animation: spin 3s linear infinite;
+section::after,
+section::before {
+  --angle: 0deg;
+  content: "";
+  position: absolute;
+  height: 64.3%;
+  width: 90.2%;
+  background-image: conic-gradient(
+    from var(--angle),
+    #ff4554,
+    #00ff99,
+    #006aff,
+    #ff0095,
+    #ff4554
+  );
+  left: 50%;
+  top: 50.2%;
+  translate: -50% -50%;
+  z-index: -1;
+  padding: 3px;
+  border-radius: 2.2rem;
+  animation: spin 3s linear infinite;
 }
 
 section::before {
-    filter: blur(1.5rem);
-    opacity: .5;
+  filter: blur(1.5rem);
+  opacity: 0.5;
 }
 
 div {
-    width: 30%;
-    height: 90%;
-    backdrop-filter: blur(1.5rem);
-    margin: auto;
-    border-radius: 2rem;
-    border: dashed 1px white;
+  width: 30%;
+  height: 90%;
+  backdrop-filter: blur(1.5rem);
+  margin: auto;
+  border-radius: 2rem;
+  border: dashed 1px white;
+  transition: 1s;
+  box-shadow: 5px 5px 14px black;
+  padding: 1rem;
 }
 
 div label {
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    margin-top: 1rem;
-    font-size: 1.5rem;
-    font-weight: bold;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  transition: 1s;
+  text-decoration-color: rgba(255, 255, 255, 0);
+}
+
+div:hover {
+  transform: scale(106%);
+
+  & label {
+    text-decoration: underline;
+    font-size: 2rem;
+    text-decoration-color: rgba(255, 255, 255, 1);
+  }
 }
 
 #pingu {
-    background-image: url("../images/Pingu3D.PNG");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: 0 50%;
+  background-image: url("../images/Pingu3D.PNG");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0 50%;
 }
 
 #xori {
-    background-image: url("../images/xoriimage.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: 0 50%;
+  background-image: url("../images/xoriimage.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0 50%;
 }
 
 footer {
-    background-image: url("../images/backgroundimage.jpg");
-    width: 90%;
-    height: 14%;
-    border-radius: 2rem;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 1.5rem;
-    margin: auto;
-    margin-top: 1.5rem; 
-    line-height: 4rem;
+  background-image: url("../images/backgroundimage.jpg");
+  width: 90%;
+  height: 14%;
+  border-radius: 2rem;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1.5rem;
+  margin: auto;
+  margin-top: 1.5rem;
+  line-height: 4rem;
 }
 
-footer::after, footer::before {
-    --angle: 0deg;
-    content: '';
-    position: absolute;
-    height: 14.3%;
-    width: 90.2%;
-    background-image: conic-gradient(
-        from var(--angle),
-        #ff4554,
-        #00ff99,
-        #006aff,
-        #ff0095,
-        #ff4554
-    );
-    left: 50%;
-    top: 91.7%;
-    translate: -50% -50%;
-    z-index: -1;
-    padding: 3px;
-    border-radius: 2.2rem;
-    animation: spin 3s linear infinite;
+footer::after,
+footer::before {
+  --angle: 0deg;
+  content: "";
+  position: absolute;
+  height: 14.3%;
+  width: 90.2%;
+  background-image: conic-gradient(
+    from var(--angle),
+    #ff4554,
+    #00ff99,
+    #006aff,
+    #ff0095,
+    #ff4554
+  );
+  left: 50%;
+  top: 91.7%;
+  translate: -50% -50%;
+  z-index: -1;
+  padding: 3px;
+  border-radius: 2.2rem;
+  animation: spin 3s linear infinite;
 }
 
 footer::before {
-    filter: blur(1.5rem);
-    opacity: .5;
+  filter: blur(1.5rem);
+  opacity: 0.5;
 }
 
-a {
-    color: white;
-    text-decoration: underline;
-    font-weight: bold;
-    transition: 1s;
+.link {
+  color: white;
+  text-decoration: underline;
+  font-weight: bold;
+  transition: 1s;
+  cursor: pointer;
 }
 
-a:hover {
-    transform: scale(110%);
+.link:hover {
+  font-size: 2rem;
+}
+
+.inv {
+  overflow-y: scroll;
+  height: 85%;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 2rem;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #727272;
+  border-radius: 2rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
